--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
@@ -9,5 +9,5 @@ spec:
     prefixes:
       - "/{{ .Values.image.domainPath }}"
       - "/help"
-      - "/project/:id"
+      - "/product"
 {{ end }}
