DEVO-1495: changing ingress route priority

--- a/charts/anaheim-project-service/templates/ingressroute.yaml
+++ b/charts/anaheim-project-service/templates/ingressroute.yaml
@@ -8,6 +8,7 @@ spec:
     - web
   routes:
     - match: (PathPrefix("/{{ .Values.domainPath }}"))
+      priority: 50
       kind: Rule
       services:
         - name: {{ include ".helm.fullname" . }}
