--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/ingressroute.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/ingressroute.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - match: (PathPrefix("/{{ .Values.image.domainPath }}"))
-      priority: 1 
+      # priority: 1 
       kind: Rule
       services:
         - name: {{ include ".helm.fullname" . }}
