--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -29,7 +29,7 @@ image:
     - name: MODEL_DEST_RELATIVE_PATH
       value: "model/FastSAM-s.pt"
     - name: MODEL_S3_URI_PATH
-      value: "s3://pvt-hv-s3-sagemaker-wddl-wdev-uw2-objects/inference/boxify"
+      value: YOUR_S3_ID
     - name: MODEL_S3_NAME
       value: "FastSAM-s.pt"
     - name: MODEL_S3_INPUTS
