DEVO-1498: changing ai-boxify

--- a/charts/anaheim-ai-boxify-service/templates/deployment.yaml
+++ b/charts/anaheim-ai-boxify-service/templates/deployment.yaml
@@ -54,6 +54,8 @@ spec:
             {{- range .Values.image.envFrom.configMapRefs }}
               - configMapRef:
                   name: {{ . }}
+              - configMapRef:
+                  name: "aws-account-configmap"
             {{- end }}
           {{- end }}
           args: [ {{.Values.image.args}} ]
