--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -22,7 +22,9 @@ image:
       value: "production"
     - name: TRAINING_ASSETS_SERVICE_URL
       value: "http://anaheim-training-assets-service:3010"
-      
+    - name: FEATURE_FLAGS_API_URL
+      value: "http://anaheim-feature-flags-service:3020"
+
 imagePullSecrets:
   - name: dockerconfigjson-github-com
 
