--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/middleware.yaml
@@ -8,7 +8,7 @@ spec:
   stripPrefix:
     prefixes:
       - "/{{ .Values.image.domainPath }}"
-      - "/help"
+#      - "/help"
       - "/project/:id"
       - "/product"
 {{ end }}
