--- a/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-verification-portlet/values.yaml
@@ -1,9 +1,9 @@
 image:
-  replicaCount: 3
+  replicaCount: 1
   repository: ghcr.io/htaic/anaheim-portal/anaheim-verification-portlet
   pullPolicy: Always
   containerPort: 3002
-  tag: "latest"
+  tag: "stable"
   livenessProbe: livez
   livenessProbePeriodSeconds: 240
   readinessProbe: readyz
