--- a/charts/anaheim-portal/charts/anaheim-container/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/values.yaml
@@ -1,9 +1,9 @@
 image:
-  replicaCount: 3
+  replicaCount: 1
   repository: ghcr.io/htaic/anaheim-portal/anaheim-container
   pullPolicy: Always
   containerPort: 3000
-  tag: "latest"
+  tag: "stable"
   livenessProbe: livez
   readinessProbe: readyz
   hostname: anaheim-container
