--- a/charts/anaheim-portal/values.yaml
+++ b/charts/anaheim-portal/values.yaml
@@ -1,11 +1,11 @@
 fullnameOverride: "anaheim-portal"
 anaheim-container:
   image:
-    replicaCount: 3
+    replicaCount: 1
     repository: ghcr.io/htaic/anaheim-portal/anaheim-container
     pullPolicy: Always
     containerPort: 3000
-    tag: latest
+    tag: stable
     hostname: anaheim-container
     envFrom:
       secretRefs:
@@ -42,11 +42,11 @@ anaheim-training-portlet:
   authResponseHeadersRegex Regex: ^X-
   trustForwardHeader: true
   image:
-    replicaCount: 3
+    replicaCount: 1
     repository: ghcr.io/htaic/anaheim-portal/anaheim-training-portlet
     pullPolicy: Always
     containerPort: 3001
-    tag: latest
+    tag: stable
     livenessProbe: livez
     livenessProbePeriodSeconds: 240
     readinessProbe: readyz
@@ -86,11 +86,11 @@ anaheim-training-portlet:
 
 anaheim-verification-portlet:
   image:
-    replicaCount: 3
+    replicaCount: 1
     repository: ghcr.io/htaic/anaheim-portal/anaheim-verification-portlet
     pullPolicy: Always
     containerPort: 3002
-    tag: latest
+    tag: stable
     livenessProbe: livez
     livenessProbePeriodSeconds: 240
     readinessProbe: readyz
