--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -7,7 +7,7 @@ image:
   repository: ghcr.io/htaic/anaheim-wavesync-adapter-service
   pullPolicy: Always
   containerPort: 3018
-  tag: "latest"
+  tag: "stable"
   livenessProbe: healthcheck
   readinessProbe: healthcheck
   hostname: anaheim-wavesync-adapter-service
