--- a/charts/hasura/charts/anaheim-authentication-service/values.yaml
+++ b/charts/hasura/charts/anaheim-authentication-service/values.yaml
@@ -3,7 +3,7 @@ domainPath: "auth"
 
 image:
   repository: ghcr.io/htaic/anaheim-authentication-service
-  tag: latest
+  tag: stable
   pullPolicy: Always
   containerPort: 9876
   hostname: auth-service
