--- a/charts/anaheim-wavesync-adapter-service/templates/deployment.yaml
+++ b/charts/anaheim-wavesync-adapter-service/templates/deployment.yaml
@@ -21,6 +21,7 @@ spec:
       labels:
         date: "{{ now | unixEpoch }}"
         {{- include ".helm.selectorLabels" . | nindent 8 }}
+        admission.datadoghq.com/enabled: "true"
     spec:
       hostname: {{ .Values.image.hostname }}
       {{- with .Values.imagePullSecrets }}
