node affinity for boxify and apm enabled for wave sync

--- a/charts/anaheim-ai-boxify-service/templates/deployment.yaml
+++ b/charts/anaheim-ai-boxify-service/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       labels:
         date: "{{ now | unixEpoch }}"
         {{- include ".helm.selectorLabels" . | nindent 8 }}
-        admission.datadoghq.com/enabled: "true"
+        # admission.datadoghq.com/enabled: "true"
     spec:
       hostname: {{ .Values.image.hostname }}
       {{- with .Values.imagePullSecrets }}
