--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -48,8 +48,8 @@ image:
       value: "3022"
     - name: REVERSE_PROXY_ORIGIN
       value: ""
-    - name: DD_LOGS_INJECTION
-      value: "true"
+    # - name: DD_LOGS_INJECTION
+    #   value: "true"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
@@ -73,15 +73,15 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
-podAnnotations:
-  admission.datadoghq.com/python-lib.version: v2.8.0
+# podAnnotations:
+#   admission.datadoghq.com/python-lib.version: v2.8.0
 storage:
   className: efs-storageclass
   provisioner: efs.csi.aws.com
   capacity: 100Gi
   volumeMode: Filesystem
   csi:
-    volumeHandle: fs-0ba685ad88487dfee
+    volumeHandle: YOUR_FILESYSTEM_ID
     volumeAttributes:
       encryptInTransit: "true"
   volumeMountPath: /assets
