--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -23,13 +23,11 @@ image:
     - name: LOG_LEVEL
       value: "INFO"
     - name: LOG_JSON
-      value: "false"
+      value: "true"
     - name: DD_ENABLED
-      value: "false"
+      value: "true"
     - name: MODEL_DEST_RELATIVE_PATH
       value: "model/FastSAM-s.pt"
-    # - name: MODEL_S3_URI_PATH
-    #   value: YOUR_S3_ID
     - name: MODEL_S3_NAME
       value: "FastSAM-s.pt"
     - name: MODEL_S3_INPUTS
@@ -48,6 +46,10 @@ image:
       value: "/assets"
     - name: REST_ENDPOINT_PORT
       value: "3022"
+    - name: REVERSE_PROXY_ORIGIN
+      value: ""
+    # - name: DD_LOGS_INJECTION
+    #   value: "true"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
@@ -57,8 +59,8 @@ service:
 
 resources:
   requests:
-    cpu: 2000m
-    memory: 2Gi
+    cpu: 4000m
+    memory: 8Gi
 
 serviceAccount:
   create: true
@@ -71,6 +73,8 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
+# podAnnotations:
+#   admission.datadoghq.com/python-lib.version: v2.8.0
 storage:
   className: efs-storageclass
   provisioner: efs.csi.aws.com
