--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -43,9 +43,9 @@ serviceAccount:
   name: ""
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 3
   targetCPUUtilizationPercentage: 80
 
 storage:
