--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -68,7 +68,7 @@ serviceAccount:
   name: ""
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 3
   targetCPUUtilizationPercentage: 80
