--- a/charts/anaheim-eventbridge/values.yaml
+++ b/charts/anaheim-eventbridge/values.yaml
@@ -39,7 +39,7 @@ serviceAccount:
   name: ""
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 3
   targetCPUUtilizationPercentage: 80
