--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -50,7 +50,7 @@ podAnnotations:
   admission.datadoghq.com/js-lib.version: v3.6.0
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 3
   targetCPUUtilizationPercentage: 80
