--- a/charts/anaheim-licensing-adapter/values.yaml
+++ b/charts/anaheim-licensing-adapter/values.yaml
@@ -15,11 +15,15 @@ image:
   hostname: anaheim-licensing-adapter
   env:
     - name: GRAPHQLURL
-      value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
-    - name: API_ANNOTATION_SERVICE
-      value: "http://anaheim-annotator-service:3012"
-    - name: TRAINING_ASSETS_SERVICE_URL
-      value: "http://anaheim-training-assets-service:3010"
+      value: 'http://anaheim-graphql-service-hasura:8080/v1/graphql'
+    - name: DUCLO_LICENSE_URL
+      value: 'https://partner.dev.platform.hanwhavision.cloud'
+    - name: REST_ENDPOINT_PORT
+      value: '3022'
+    - name: NODE_ENV
+      value: 'production'
+    - name: AWS_REGION
+      value: 'us-west-2'
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
