DEVO-1559: changing domainpath for licensing adapter

--- a/charts/anaheim-licensing-adapter/values.yaml
+++ b/charts/anaheim-licensing-adapter/values.yaml
@@ -1,6 +1,6 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-licensing-adapter
-domainPath: "projects"
+domainPath: "licensing-adapter"
 forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
 authResponseHeadersRegex Regex: ^X-
 trustForwardHeader: true
