test env values addeded to meta data

--- a/charts/anaheim-portal/values.yaml
+++ b/charts/anaheim-portal/values.yaml
@@ -127,3 +127,8 @@ anaheim-verification-portlet:
     minReplicas: 1
     maxReplicas: 3
     targetCPUUtilizationPercentage: 80
+
+configMap:
+  name: app-service-env
+  data:
+    ENVIRONMENT: "development"
