--- a/charts/anaheim-licensing-adapter/templates/deployment.yaml
+++ b/charts/anaheim-licensing-adapter/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
                   key: HASURA_GRAPHQL_ADMIN_SECRET
             - name: DCUCLO_LICENSE_URL
               valueFrom:
-                configMapRef:
+                configMapKeyRef:
                   name: duclo-configmap
                   key: DUCLO_AUTH_CERTS_URL
           {{- if .Values.image.env }}
