--- a/charts/anaheim-portal/values.yaml
+++ b/charts/anaheim-portal/values.yaml
@@ -123,7 +123,7 @@ anaheim-verification-portlet:
     name: ""
 
   autoscaling:
-    enabled: true
+    enabled: false
     minReplicas: 1
     maxReplicas: 3
     targetCPUUtilizationPercentage: 80
