changes in portal

--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -8,6 +8,7 @@ spec:
   stripPrefix:
     prefixes:
       - "/{{ .Values.image.domainPath }}"
+      - "/license"
       # - "/help"
       # - "/project/:id"
 {{ end }}
