changing /help route

--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -11,6 +11,6 @@ spec:
       - "/license"
       - "/training"
       - "/project"
-      # - "/help"
+      - "/help"
       # - "/project/:id"
 {{ end }}
