DEVO-1551: adding redirect for /help

--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -12,4 +12,7 @@ spec:
       - "/training"
       - "/project"
       - "/help"
+    redirectRegex:
+      regex: {{ .Values.image.domainPath }}/help
+      replacement: https://support.hanwhavisionamerica.com/hc/en-us/articles/21707499681947-Welcome-Guide-for-Flex-AI
 {{ end }}
