DEVO-1581: redirecting /help path

--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -11,4 +11,7 @@ spec:
 #      - "/license"
       # - "/help"
       # - "/project/:id"
+    redirectRegex:
+      regex: {{ .Values.image.domainPath }}/help
+      replacement: https://support.hanwhavisionamerica.com/hc/en-us/articles/21707499681947-Welcome-Guide-for-Flex-AI
 {{ end }}
