--- a/charts/anaheim-portal/charts/anaheim-container/templates/ingressroutes.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/ingressroutes.yaml
@@ -1,20 +1,21 @@
-#apiVersion: traefik.containo.us/v1alpha1
-#kind: IngressRoute
-#metadata:
-#  name: "{{ include ".helm.fullname" . }}-route"
-#  namespace: {{ .Values.namespace }}
-#spec:
-#  entryPoints:
-#    - web
-#  routes:
-#    - match: (PathPrefix("/"))
-#      priority: 
-#      kind: Rule
-#      services:
-#        - name: {{ include ".helm.fullname" . }}
-#          kind: Service
-#          port: {{ .Values.image.containerPort }}
-#      middlewares:
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: "{{ include ".helm.fullname" . }}-route"
+  namespace: {{ .Values.namespace }}
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: (PathPrefix("/help"))
+      priority: 
+      kind: Rule
+      services:
+        - name: {{ include ".helm.fullname" . }}
+          kind: Service
+          port: {{ .Values.image.containerPort }}
+      middlewares:
+        - name: "{{ include ".helm.fullname" . }}-strip"
 #      {{- if eq .Values.trustForwardHeader true }}
 #      - name: "{{ include ".helm.fullname" . }}-auth"
 #      {{- end }}
