--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -12,6 +12,6 @@ spec:
       # - "/help"
       # - "/project/:id"
   redirectRegex:
-    regex: {{ .Values.image.domainPath }}/help
+    regex: "{{ .Values.image.domainPath }}/help"
     replacement: 'https://support.hanwhavisionamerica.com/hc/en-us/articles/21707499681947-Welcome-Guide-for-Flex-AI'
 {{ end }}
