--- a/charts/anaheim-project-service/templates/ingressroute.yaml
+++ b/charts/anaheim-project-service/templates/ingressroute.yaml
@@ -15,9 +15,5 @@ spec:
           kind: Service
           port: {{ .Values.image.containerPort }}
       middlewares:
-      {{- if eq .Values.trustForwardHeader true }}
-      - name: "{{ include ".helm.fullname" . }}-auth"
-      {{- end }}
-      {{ if (not (hasKey .Values "noStripPath")) }}
-      - name: "{{ include ".helm.fullname" . }}-strip"
-      {{ end }}
+      - name: "{{ include ".helm.fullname" . }}-secured"
+
