--- a/charts/anaheim-ai-boxify-service/values.yaml
+++ b/charts/anaheim-ai-boxify-service/values.yaml
@@ -3,6 +3,7 @@ fullnameOverride: anaheim-ai-boxify-service
 forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
 authResponseHeadersRegex Regex: ^X-
 trustForwardHeader: true
+licenseAuthaddress: http://anaheim-licensing-adapter:3029/license/status-middleware
 domainPath: "ai-boxify"
 
 image:
