--- a/charts/anaheim-annotator-service/templates/ingressroute.yaml
+++ b/charts/anaheim-annotator-service/templates/ingressroute.yaml
@@ -14,9 +14,4 @@ spec:
           kind: Service
           port: {{ .Values.image.containerPort }}
       middlewares:
-      {{- if eq .Values.trustForwardHeader true }}
-      - name: "{{ include ".helm.fullname" . }}-auth"
-      {{- end }}
-      {{ if (not (hasKey .Values.image "noStripPath")) }}
-      - name: "{{ include ".helm.fullname" . }}-strip"
-      {{ end }}
+      - name: "{{ include ".helm.fullname" . }}-secured"
