--- a/charts/anaheim-ai-boxify-service/templates/license-validate-middleware.yaml
+++ b/charts/anaheim-ai-boxify-service/templates/license-validate-middleware.yaml
@@ -2,11 +2,11 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: "{{ include ".helm.fullname" . }}-auth"
+  name: "{{ include ".helm.fullname" . }}-validate"
   namespace: {{ .Values.namespace }}
 spec:
   forwardAuth:
-    address: {{ .Values.forwardAuthaddress }}
+    address: {{ .Values.licenseAuthaddress }}
     authResponseHeadersRegex: {{ .Values.authResponseHeadersRegex }}
     trustForwardHeader: {{ .Values.trustForwardHeader }}
 {{ end }}
