--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/chain-middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/chain-middleware.yaml
@@ -1,12 +1,17 @@
-{{ if and (ne .Values.domainPath "") (hasKey .Values "domainPath") }}
+{{ if eq .Values.trustForwardHeader true }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: "{{ include ".helm.fullname" . }}-validate"
+  name: "{{ include ".helm.fullname" . }}-secured"
   namespace: {{ .Values.namespace }}
 spec:
-  forwardAuth:
-    address: {{ .Values.licenseAuthaddress }}
-    authResponseHeadersRegex: {{ .Values.authResponseHeadersRegex }}
-    trustForwardHeader: {{ .Values.trustForwardHeader }}
+  chain:
+    middlewares:
+      {{- if eq .Values.trustForwardHeader true }}
+      - name: "{{ include ".helm.fullname" . }}-auth"
+      - name: "{{ include ".helm.fullname" . }}-validate"
+      {{- end }}
+      {{ if (not (hasKey .Values "noStripPath")) }}
+      - name: "{{ include ".helm.fullname" . }}-strip"
+      {{ end }}
 {{ end }}
