--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/ingressroute.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/ingressroute.yaml
@@ -15,64 +15,10 @@ spec:
           kind: Service
           port: {{ .Values.image.containerPort }}
       middlewares:
-      - name: "{{ include ".helm.fullname" . }}-secured"
-
-    # - match: (PathPrefix("/project/[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}"))
-    #   priority:
-    #   kind: Rule
-    #   services:
-    #     - name: {{ include ".helm.fullname" . }}
-    #       kind: Service
-    #       port: {{ .Values.image.containerPort }}
-    #   middlewares:
-    #   {{- if eq .Values.trustForwardHeader true }}
-    #   - name: "{{ include ".helm.fullname" . }}-auth"
-    #   {{- end }}
-    #   {{ if (not (hasKey .Values.image "noStripPath")) }}
-    #   - name: "{{ include ".helm.fullname" . }}-strip"
-    #   {{ end }}
-
-    # - match: (PathPrefix("/product"))
-    #   priority: 100 
-    #   kind: Rule
-    #   services:
-    #     - name: {{ include ".helm.fullname" . }}
-    #       kind: Service
-    #       port: {{ .Values.image.containerPort }}
-    #   middlewares:
-    #   {{- if eq .Values.trustForwardHeader true }}
-    #   - name: "{{ include ".helm.fullname" . }}-auth"
-    #   {{- end }}
-    #   {{ if (not (hasKey .Values.image "noStripPath")) }}
-    #   - name: "{{ include ".helm.fullname" . }}-strip"
-    #   {{ end }}
-
-    # - match: (PathPrefix("/license"))
-    #   priority: 
-    #   kind: Rule
-    #   services:
-    #     - name: {{ include ".helm.fullname" . }}
-    #       kind: Service
-    #       port: {{ .Values.image.containerPort }}
-    #   middlewares:
-    #   {{- if eq .Values.trustForwardHeader true }}
-    #    - name: "{{ include ".helm.fullname" . }}-auth"
-    #   {{- end }}
-    #   {{ if (not (hasKey .Values.image "noStripPath")) }}
-    #    - name: "{{ include ".helm.fullname" . }}-strip"
-    #   {{ end }}
-      
-#    - match: (PathPrefix("/help"))
-#      priority: 
-#      kind: Rule
-#      services:
-#        - name: {{ include ".helm.fullname" . }}
-#          kind: Service
-#          port: {{ .Values.image.containerPort }}
-#      middlewares:
-#      {{- if eq .Values.trustForwardHeader true }}
-#       - name: "{{ include ".helm.fullname" . }}-auth"
-#      {{- end }}
-#      {{ if (not (hasKey .Values.image "noStripPath")) }}
-#       - name: "{{ include ".helm.fullname" . }}-strip"
-#      {{ end }}
+      {{- if eq .Values.trustForwardHeader true }}
+      - name: "{{ include ".helm.fullname" . }}-auth"
+      {{- end }}
+      {{ if (not (hasKey .Values.image "noStripPath")) }}
+      - name: "{{ include ".helm.fullname" . }}-strip"
+      {{ end }}
+      #  - name: "{{ include ".helm.fullname" . }}-secured"
