--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/license-validate-middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/license-validate-middleware.yaml
@@ -1,4 +1,4 @@
-{{ if and (ne .Values.domainPath "") (hasKey .Values "domainPath") }}
+{{ if eq .Values.trustForwardHeader true }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
