DEVO-1605: add config for new domain-path in training portlet

--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -14,7 +14,7 @@ image:
   readinessProbe: readyz
   readinessProbePeriodSeconds: 240
   hostname: anaheim-training-portlet
-  domainPath: "training"
+  domainPath: "training-portlet"
   envFrom:
     secretRefs:
       - hasura-secret
