--- a/charts/anaheim-portal/charts/anaheim-container/templates/ingressroutes.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/ingressroutes.yaml
@@ -37,17 +37,17 @@ spec:
        - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
 
-    # - match: (PathPrefix("/training"))
-    #   priority: 
-    #   kind: Rule
-    #   services:
-    #     - name: {{ include ".helm.fullname" . }}
-    #       kind: Service
-    #       port: {{ .Values.image.containerPort }}
-    #   middlewares:
-    #   {{- if eq .Values.trustForwardHeader true }}
-    #    - name: "{{ include ".helm.fullname" . }}-auth"
-    #   {{- end }}
-    #   {{ if (not (hasKey .Values.image "noStripPath")) }}
-    #    - name: "{{ include ".helm.fullname" . }}-strip"
-    #   {{ end }}
+    - match: (PathPrefix("/training"))
+      priority: 
+      kind: Rule
+      services:
+        - name: {{ include ".helm.fullname" . }}
+          kind: Service
+          port: {{ .Values.image.containerPort }}
+      middlewares:
+      {{- if eq .Values.trustForwardHeader true }}
+       - name: "{{ include ".helm.fullname" . }}-auth"
+      {{- end }}
+      {{ if (not (hasKey .Values.image "noStripPath")) }}
+       - name: "{{ include ".helm.fullname" . }}-strip"
+      {{ end }}
