--- a/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/middleware.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   stripPrefix:
     prefixes:
-      # - "/training"
+      - "/training"
       - "/license"
       #- "/help"
       - "/project/:id"
