--- a/charts/anaheim-annotator-service/values.yaml
+++ b/charts/anaheim-annotator-service/values.yaml
@@ -27,6 +27,8 @@ image:
       value: "http://anaheim-project-service:3014"
     - name: SERVICE_ENV
       value: "non-local"
+    - name: ENVIRONMENT
+      value: " "  
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
