--- a/charts/anaheim-licensing-adapter/values.yaml
+++ b/charts/anaheim-licensing-adapter/values.yaml
@@ -14,6 +14,8 @@ image:
   readinessProbe: healthcheck
   hostname: anaheim-licensing-adapter
   env:
+    - name: ENVIRONMENT
+      value: " "  
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: NODE_ENV
