--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -15,6 +15,8 @@ image:
   readinessProbe: healthcheck
   hostname: anaheim-project-service
   env:
+    - name: ENVIRONMENT
+      value: " "
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: API_ANNOTATION_SERVICE
