--- a/charts/anaheim-licensing-adapter/values.yaml
+++ b/charts/anaheim-licensing-adapter/values.yaml
@@ -44,6 +44,7 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 4
   targetCPUUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 80
 
 affinity:
   #Preferred if nodes are less please use this block
