--- a/charts/anaheim-training-assets-service/templates/deployment.yaml
+++ b/charts/anaheim-training-assets-service/templates/deployment.yaml
@@ -99,3 +99,6 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      topologySpreadConstraints:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
