--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -4,7 +4,7 @@ domainPath: "training-assets"
 forwardAuthaddress: http://anaheim-graphql-service-anaheim-authentication-service:9876/api/v1/validate
 authResponseHeadersRegex Regex: ^X-
 trustForwardHeader: true
-licenseAuthaddress: http://anaheim-licensing-adapter:3029/license/status-middleware
+licenseAuthaddress: http://anaheim-training-assets-service:3029/license/status-middleware
 
 image:
   replicaCount: 1
@@ -47,10 +47,11 @@ serviceAccount:
   name: ""
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 3
+  maxReplicas: 4
   targetCPUUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 80
 
 storage:
   className: efs-storageclass
@@ -62,3 +63,34 @@ storage:
     volumeAttributes:
       encryptInTransit: "true"
   volumeMountPath: /assets
+
+affinity:
+  #Preferred if nodes are less please use this block
+  podAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+     - weight: 100
+       podAffinityTerm:
+         labelSelector:
+           matchExpressions:
+           - key: app.kubernetes.io/name
+             operator: In
+             values:
+               - anaheim-training-assets-service
+         topologyKey: "topology.kubernetes.io/zone"
+  # podAffinity:
+  #   requiredDuringSchedulingIgnoredDuringExecution:
+  #     - labelSelector:
+  #         matchExpressions:
+  #         - key: app.kubernetes.io/name
+  #           operator: In
+  #           values:
+  #           - anaheim-training-assets-service
+  #       topologyKey: "topology.kubernetes.io/zone"
+
+topologySpreadConstraints:
+  - maxSkew: 1
+    topologyKey: "topology.kubernetes.io/zone"
+    whenUnsatisfiable: DoNotSchedule
+    labelSelector:
+      matchLabels:
+        app.kubernetes.io/name: anaheim-training-assets-service
