Added value to values.yaml

--- a/charts/anaheim-baseline/values.yaml
+++ b/charts/anaheim-baseline/values.yaml
@@ -17,6 +17,7 @@ AWS:
   aws_project_sqs_name: YOUR_AWS_PROJECT_SQS_NAME
   aws_project_sqs_url: YOUR_AWS_PROJECT_SQS_URL
   aws_model_s3_uri_path: YOUR_AWS_MODEL_S3_URI_PATH
+  duclo_api_key: YOUR_DUCLO_API_KEY
 
 dockerCredentials:
   username: YOUR_GITHUB_USER
